--- a/ka-sirup.tex
+++ b/ka-sirup.tex
@@ -4,14 +4,13 @@
 \usepackage{textcomp}
 
 \newcommand{\sometext}{
-sol\textbullet{}ami\textbullet{}x klarapfelkonfitüre\textbar confiture de pomme transparente \\
-klarapfel, zucker, wasser, zitronensaft, zimt\textbar pomme transparente, sucre, eau, jus de citron, cannelle \\
+sol\textbullet{}ami\textbullet{}x klarapfelsirup\textbar sirop de pomme transparente \\
+klarapfelsaft, zucker, wasser, zitronensaft\textbar jus de pomme transparente, sucre, eau, jus de citron \\
 abgefüllt\textbar mise en pot christian@ramseyer.it\\
-mindestens haltbar bis\textbar à consommer avant le 20.03.24\\
-kann auch als apfelmus gelöffelt werden\textbar peut se dégustér à la cuillère comme une compote
+kühl lagern, mindestens haltbar bis\textbar conserver au frais, à consommer avant le 20.05.24\\
 }
 
-\newcommand{\labelw}{10.5cm}
+\newcommand{\labelw}{9cm}
 %\newcommand{\textw}{10.3cm}
 \newcommand{\textw}{\dimexpr\labelw-0.2cm\relax}
 \newcommand{\labelh}{3.0cm}
