rename test file

--- a/testlabel.tex
+++ b/testlabel.tex
@@ -5,10 +5,10 @@
 
 \newcommand{\sometext}{
 sol\textbullet{}ami\textbullet{}x testlabel\textbar etiquette de test \\
-bits und bytes\textbar bits et bytes \\
+zutat 1, zutat2\textbar ingredient 1, ingredient 2 \\
 abgefüllt\textbar mise en pot christian@ramseyer.it\\
-mindestens haltbar bis\textbar à consommer avant le 20.03.24\\
-kann auch als apfelmus gelöffelt werden\textbar peut se dégustér à la cuillère comme une compote
+mindestens haltbar bis\textbar à consommer avant le DATUM_HIER\\
+weiterer infos\textbar info additionelle
 }
 
 \newcommand{\labelw}{10.5cm}
