--- a/testlabel.tex
+++ b/testlabel.tex
@@ -7,20 +7,17 @@
 sol\textbullet{}ami\textbullet{}x testlabel\textbar etiquette de test \\
 zutat 1, zutat2\textbar ingredient 1, ingredient 2 \\
 abgefüllt\textbar mise en pot christian@ramseyer.it\\
-mindestens haltbar bis\textbar à consommer avant le DATUM_HIER\\
+mindestens haltbar bis\textbar à consommer avant le (datum) \\
 weiterer infos\textbar info additionelle
 }
 
 \newcommand{\labelw}{10.5cm}
-%\newcommand{\textw}{10.3cm}
-\newcommand{\textw}{\dimexpr\labelw-0.2cm\relax}
 \newcommand{\labelh}{3.0cm}
+\newcommand{\textw}{\dimexpr\labelw-0.2cm\relax}
 
 % spacing labelh + cm margin
-%\newcommand{\spaceh}{3.7cm}
 \newcommand{\spaceh}{\dimexpr\labelh+0.2cm\relax}
 % vertical spacing: 0.5 * \labelh
-%\newcommand{\labelc}{1.75cm}
 \newcommand{\labelc}{\dimexpr\labelh/2\relax}
 
 
