--- a/beispiel-label.tex
+++ b/beispiel-label.tex
@@ -4,11 +4,12 @@
 \usepackage{textcomp}
 
 \newcommand{\sometext}{
-sol\textbullet{}ami\textbullet{}x testlabel\textbar etiquette de test \\
-zutat 1, zutat2\textbar ingredient 1, ingredient 2 \\
-abgefüllt\textbar mise en pot christian@ramseyer.it\\
-mindestens haltbar bis\textbar à consommer avant le (datum) \\
-weiterer infos\textbar info additionelle
+sol\textbullet{}ami\textbullet{}x testlabel\textbar etiquette de test\\
+zutat 1 80\% (vom Hof), zutat 2 20\% (EU)\textbar ingredient 1 80\% (de la ferme), ingredient 2 20\% (origin) \\
+abgefüllt\textbar mise en pot du@example.org\\
+mindestens haltbar bis\textbar à consommer avant le (datum)\\
+weiterer infos\textbar info additionelle\\
+verein sol\textbullet{}ami\textbullet{}x, Alexander-Moser-Strasse 28, 2503 Biel/Bienne
 }
 
 \newcommand{\labelw}{10.5cm}
