--- a/ka24-gelee.tex
+++ b/ka24-gelee.tex
@@ -6,11 +6,10 @@
 \pagestyle{empty}
 
 \newcommand{\sometext}{
-sol\textbullet{}ami\textbullet{}x klarapfelkonfitüre\textbar confiture de pomme transparente \\
-klarapfel, zucker, wasser, zitronensaft, zimt\textbar pomme transparente, sucre, eau, jus de citron, cannelle \\
+sol\textbullet{}ami\textbullet{}x klarapfelgelee\textbar gelée de pomme transparente blanche\\
+klarapfel, gelierzucker, wasser, zitronensaft, zimt\textbar pomme transparente blanche, sucre gélifiant, eau, jus de citron, cannelle \\
 abgefüllt\textbar mise en pot christian@ramseyer.it\\
-mindestens haltbar bis\textbar à consommer avant le 30.08.25\\
-kann auch als apfelmus gelöffelt werden\textbar peut se dégustér à la cuillère comme une compote
+mindestens haltbar bis\textbar à consommer avant le 30.08.25
 }
 
 \newcommand{\phtext}{
